Additional CSS/JS optimizations
Cleaned up admin options (still needs a lot of work)

--- a/frank/stylesheets/css/single.css
+++ b/frank/stylesheets/css/single.css
@@ -1,18 +1,18 @@
 #content.single {
   position: relative; }
-  #content.single .post-info .previous {
+  #content.single #previous_post {
     margin-top: 60px;
     font-style: italic;
     font-family: Georgia, "Times New Roman", Times, serif; }
-    #content.single .post-info .previous a {
+    #content.single #previous_post a {
       font-size: 13px;
       display: block;
       text-align: center; }
-    #content.single .post-info .previous nav {
+    #content.single #previous_post nav {
       padding-bottom: 15px;
       border-bottom: 1px solid #f0eceb;
       margin: 15px 0; }
-    #content.single .post-info .previous .arrow {
+    #content.single #previous_post .arrow {
       display: block;
       box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3);
       width: 45px;
@@ -22,9 +22,9 @@
       white-space: nowrap;
       overflow: hidden;
       background: #5d504f url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAQCAYAAADESFVDAAAAWElEQVR42qXSzQkAIAgF4EZolEZqhDZqpEZwBM8dovSUYD9YwuNdPgIlt5tWa6AA9wkgpXPfACeagaeAAGkFigDZACbKAoAC+5f+od7Oesh/iC+/QC/DPQAIxvkuqJQtLgAAAABJRU5ErkJggg==") no-repeat 16px 15px; }
-    #content.single .post-info .previous a:hover {
+    #content.single #previous_post a:hover {
       color: #ff1e00; }
-      #content.single .post-info .previous a:hover .arrow {
+      #content.single #previous_post a:hover .arrow {
         background-color: #3d302f; }
   #content.single article header h1 {
     font-size: 24px;
@@ -40,10 +40,10 @@
     font-weight: 700; }
   #content.single article dl dd {
     margin-left: 40px; }
-  #content.single #content_primary #excerpt {
+  #content.single #excerpt {
     padding-bottom: 30px;
     color: #5d504f; }
-    #content.single #content_primary #excerpt p {
+    #content.single #excerpt p {
       padding-top: 0;
       font-size: 28px;
       font-family: Georgia, "Times New Roman", Times, serif;
@@ -52,22 +52,26 @@
     margin-bottom: 45px; }
   #content.single #content_primary .pagination {
     margin-top: 30px; }
-  #content.single #content_primary footer {
-    border-bottom: 2px solid #f0eceb;
-    padding-bottom: 15px;
-    margin-bottom: 30px; }
-    #content.single #content_primary footer .widget:nth-child(4n) {
-      margin-right: 40px; }
-    #content.single #content_primary footer .widget:nth-child(4n+1) {
-      clear: none; }
-    #content.single #content_primary footer .widget:nth-child(3n) {
-      margin-right: 0; }
-    #content.single #content_primary footer .widget:nth-child(3n+1) {
-      clear: left; }
   #content.single #content_primary #content_main {
     margin: 30px 0;
     border-bottom: 2px solid #f0eceb;
     padding-bottom: 15px; }
+  #content.single #post_footer {
+    border-bottom: 2px solid #f0eceb;
+    padding-bottom: 15px;
+    margin-bottom: 30px; }
+    #content.single #post_footer .widget:nth-child(4n) {
+      margin-right: 40px; }
+    #content.single #post_footer .widget:nth-child(4n+1) {
+      clear: none; }
+    #content.single #post_footer .widget:nth-child(3n) {
+      margin-right: 0; }
+    #content.single #post_footer .widget:nth-child(3n+1) {
+      clear: left; }
+  #content.single #post_tweet {
+    float: right;
+    margin: 15px 0 30px 0;
+    margin: 15px 0 30px 0; }
 
 /*MOBILE*/
 @media only screen and  (max-width: 767px) {
