--- a/frank/stylesheets/scss/mobile.scss
+++ b/frank/stylesheets/scss/mobile.scss
@@ -22,6 +22,8 @@
 		.pull-two, .pull-three, .pull-four, .pull-five, .pull-six, .pull-seven, .pull-eight, .pull-nine, .pull-ten { right: auto; }
 		
 		/* Mobile 4-column Grid */
+		/*Unused, so commented out*/
+		/*
 		.row .phone-one:first-child, .row .phone-two:first-child, .row .phone-three:first-child, .row .phone-four:first-child { margin-left: 0; }
 		.row .phone-one:last-child, .row .phone-two:last-child, .row .phone-three:last-child, .row .phone-four:last-child { float: right; }
 		
@@ -39,7 +41,7 @@
 		.row .pull-one-phone { right: 26.08% }
 		.row .pull-two-phone { right: 52.2% }
 		.row .pull-three-phone { right: 78.3%; }
-		
+		*/
 		
 	}
 	
