--- a/frank/stylesheets/css/comments.css
+++ b/frank/stylesheets/css/comments.css
@@ -6,53 +6,57 @@
     font-size: 28px;
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #5d504f; }
-  #comments_container #comments {
-    list-style: none; }
-    #comments_container #comments li.comment {
-      margin: 60px 0;
-      background: none; }
-    #comments_container #comments li.comment.bypostauthor {
-      margin: 45px 0; }
-    #comments_container #comments li:first-child {
-      margin-top: 0px; }
-    #comments_container #comments .content {
-      font-family: Georgia, "Times New Roman", Times, serif; }
-      #comments_container #comments .content p {
-        font-size: 17px;
-        color: #3d302f; }
-      #comments_container #comments .content blockquote, #comments_container #comments .content blockquote p {
-        font-size: 13px; }
-    #comments_container #comments .comment-edit-link {
-      font-weight: 700;
-      color: #ea0000; }
-  #comments_container #no_comments {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 28px;
-    margin: 30px 0;
-    color: #5d504f; }
-  #comments_container #respond input[type=text], #comments_container #respond textarea {
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 100%; }
-  #comments_container #respond label {
-    display: none; }
-  #comments_container #respond #comment_form_info input[type=text] {
-    margin-bottom: 15px;
-    text-align: right; }
-  #comments_container #respond textarea {
-    margin: 0;
-    height: 118px; }
-  #comments_container #respond textarea:focus {
-    height: 375px; }
-  #comments_container #comment_form header h1 {
-    font-size: 20px; }
-  #comments_container #comment_form header .loggedin {
-    font-style: italic; }
-  #comments_container #submit {
-    margin-top: 15px;
-    margin-left: 26.1%; }
+
+#comments {
+  list-style: none; }
+  #comments .comment {
+    margin: 60px 0;
+    background: none; }
+  #comments .comment.bypostauthor {
+    margin: 45px 0; }
+  #comments li:first-child {
+    margin-top: 0px; }
+  #comments .content {
+    font-family: Georgia, "Times New Roman", Times, serif; }
+    #comments .content p {
+      font-size: 17px;
+      color: #3d302f; }
+    #comments .content blockquote, #comments .content blockquote p {
+      font-size: 13px; }
+  #comments .comment-edit-link {
+    font-weight: 700;
+    color: #ea0000; }
+
+#no_comments {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 28px;
+  margin: 30px 0;
+  color: #5d504f; }
+
+#respond input[type=text], #respond textarea {
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%; }
+#respond label {
+  display: none; }
+#respond #comment_form_info input[type=text] {
+  margin-bottom: 15px;
+  text-align: right; }
+#respond textarea {
+  margin: 0;
+  height: 118px; }
+#respond textarea:focus {
+  height: 375px; }
+#respond #submit {
+  margin-top: 15px;
+  margin-left: 26.1%; }
+
+#comment_form h1 {
+  font-size: 20px; }
+#comment_form .loggedin {
+  font-style: italic; }
 
 /*MOBILE*/
 @media only screen and  (max-width: 767px) {
