--- a/frank/stylesheets/css/global.css
+++ b/frank/stylesheets/css/global.css
@@ -207,7 +207,8 @@ header {
     color: #5d504f;
     margin: 5px 0 0 0; }
   header a {
-    color: #050000; }
+    color: #050000;
+    text-decoration: none; }
   header a:hover {
     color: #5d504f; }
 
@@ -347,27 +348,26 @@ dl.metadata {
 #content {
   margin: 0 0 60px 0;
   position: relative; }
-
-#content.home article section, #content.single article section, #content.page article section, #content.archive article section {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 17px; }
-  #content.home article section p, #content.home article section ul li, #content.home article section ol li, #content.home article section dt, #content.home article section dd, #content.home article section blockquote, #content.single article section p, #content.single article section ul li, #content.single article section ol li, #content.single article section dt, #content.single article section dd, #content.single article section blockquote, #content.page article section p, #content.page article section ul li, #content.page article section ol li, #content.page article section dt, #content.page article section dd, #content.page article section blockquote, #content.archive article section p, #content.archive article section ul li, #content.archive article section ol li, #content.archive article section dt, #content.archive article section dd, #content.archive article section blockquote {
+  #content section {
+    font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 17px; }
-  #content.home article section code, #content.home article section small, #content.single article section code, #content.single article section small, #content.page article section code, #content.page article section small, #content.archive article section code, #content.archive article section small {
-    font-size: 13px; }
-  #content.home article section img, #content.single article section img, #content.page article section img, #content.archive article section img {
-    max-width: 100%;
-    box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3); }
+    #content section p, #content section ul li, #content section ol li, #content section dt, #content section dd, #content section blockquote {
+      font-size: 17px; }
+    #content section code, #content section small {
+      font-size: 13px; }
+    #content section img {
+      max-width: 100%;
+      box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3); }
 
-#content.page article section img {
+#content.page section img {
   box-shadow: none !important; }
 
-#content.home article, #content.archive article {
+#content.home article, #content.archive article, #content.search article {
   margin-top: 60px;
   margin-bottom: 60px; }
-#content.home article:first-child, #content.archive article:first-child {
+#content.home article:first-child, #content.archive article:first-child, #content.search article:first-child {
   margin-top: 0; }
-#content.home article:last-child, #content.archive article:last-child {
+#content.home article:last-child, #content.archive article:last-child, #content.search article:last-child {
   margin-bottom: 0; }
 
 /*Buttons*/
@@ -401,6 +401,10 @@ button.alt:hover, .button.alt:hover, input[type=submit].alt:hover {
   background: #ff1e00;
   color: #fffefe;
   border: 1px solid rgba(18, 7, 6, 0.5); }
+
+button.small2, .button.small2, a.button.small2 {
+  font-size: 10px;
+  padding: 4px 8px; }
 
 /*Search - not implemented*/
 #searchform input {
