--- a/frank/stylesheets/css/index.css
+++ b/frank/stylesheets/css/index.css
@@ -12,59 +12,34 @@
     margin-left: 10px; }
   #content.home .content-header .more {
     font-family: Georgia, "Times New Roman", Times, serif; }
-#content.home .content.oneup .post .read-more, #content.home .content.twoup .post .read-more, #content.home .content.threeup .post .read-more, #content.home .content.fourup .post .read-more {
+#content.home .content .read-more {
   margin-top: 15px; }
-  #content.home .content.oneup .post .read-more .more, #content.home .content.twoup .post .read-more .more, #content.home .content.threeup .post .read-more .more, #content.home .content.fourup .post .read-more .more {
+  #content.home .content .read-more .more {
     font-size: 11px; }
-#content.home .content.oneup.large article header h1 {
+#content.home .content.oneup.large header h1 {
   font-size: 20px; }
-#content.home .content.oneup.large article section {
+#content.home .content.oneup.large section {
   margin: 0 0 15px 0; }
-  #content.home .content.oneup.large article section p {
+  #content.home .content.oneup.large section p {
     font-style: italic;
     font-size: 38px; }
 #content.home .content.twoup .post, #content.home .content.threeup .post, #content.home .content.fourup .post {
-  margin-top: 15px; }
-  #content.home .content.twoup .post header h1, #content.home .content.threeup .post header h1, #content.home .content.fourup .post header h1 {
-    font-size: 13px;
-    font-weight: 700; }
-    #content.home .content.twoup .post header h1 a, #content.home .content.threeup .post header h1 a, #content.home .content.fourup .post header h1 a {
-      text-decoration: none; }
-  #content.home .content.twoup .post section p, #content.home .content.threeup .post section p, #content.home .content.fourup .post section p {
-    font-size: 13px; }
+  margin-top: 15px;
+  float: left !important; }
+#content.home .content.twoup header h1, #content.home .content.threeup header h1, #content.home .content.fourup header h1 {
+  font-size: 13px;
+  font-weight: 700; }
+#content.home .content.twoup section p, #content.home .content.threeup section p, #content.home .content.fourup section p {
+  font-size: 13px; }
 #content.home .content.twoup .metadata li, #content.home .content.threeup .metadata li, #content.home .content.fourup .metadata li {
   font-size: 11px; }
-#content.home .content.twoup .post {
-  float: left !important; }
-#content.home .content.twoup .post:nth-child(2n+1) {
+#content.home .content.twoup .post:nth-child(2n+1), #content.home .content.threeup .post:nth-child(3n+1), #content.home .content.fourup .post:nth-child(4n+1) {
   margin-left: 0;
   clear: left; }
-#content.home .content.twoup .post:nth-child(2n) {
+#content.home .content.twoup .post:nth-child(2n), #content.home .content.threeup .post:nth-child(3n), #content.home .content.fourup .post:nth-child(4n) {
   margin-right: 0;
   float: right; }
-#content.home .content.twoup .post:nth-child(n+3) {
-  margin-bottom: 0;
-  margin-top: 45px; }
-#content.home .content.fourup .post {
-  float: left !important; }
-#content.home .content.fourup .post:nth-child(4n+1) {
-  margin-left: 0;
-  clear: left; }
-#content.home .content.fourup .post:nth-child(4n) {
-  margin-right: 0;
-  float: right; }
-#content.home .content.fourup .post:nth-child(n+5) {
-  margin-bottom: 0;
-  margin-top: 45px; }
-#content.home .content.threeup .post {
-  float: left !important; }
-#content.home .content.threeup .post:nth-child(3n+1) {
-  margin-left: 0;
-  clear: left; }
-#content.home .content.threeup .post:nth-child(3n) {
-  margin-right: 0;
-  float: right; }
-#content.home .content.threeup .post:nth-child(n+4) {
+#content.home .content.twoup .post:nth-child(n+3), #content.home .content.threeup .post:nth-child(n+4), #content.home .content.fourup .post:nth-child(n+5) {
   margin-bottom: 0;
   margin-top: 45px; }
 
