--- a/frank/stylesheets/css/mobile.css
+++ b/frank/stylesheets/css/mobile.css
@@ -57,48 +57,26 @@
     right: auto; }
 
   /* Mobile 4-column Grid */
-  .row .phone-one:first-child, .row .phone-two:first-child, .row .phone-three:first-child, .row .phone-four:first-child {
-    margin-left: 0; }
-
-  .row .phone-one:last-child, .row .phone-two:last-child, .row .phone-three:last-child, .row .phone-four:last-child {
-    float: right; }
-
-  .row .phone-one, .row .phone-two, .row .phone-three, .row .phone-four {
-    margin-left: 4.4%;
-    float: left;
-    min-height: 1px;
-    position: relative;
-    padding: 0; }
-
-  .row .phone-one {
-    width: 21.68% !important; }
-
-  .row .phone-two {
-    width: 47.8% !important; }
-
-  .row .phone-three {
-    width: 73.9% !important; }
-
-  .row .phone-four {
-    width: 100% !important; }
-
-  .row .push-one-phone {
-    left: 26.08%; }
-
-  .row .push-two-phone {
-    left: 52.2%; }
-
-  .row .push-three-phone {
-    left: 78.3%; }
-
-  .row .pull-one-phone {
-    right: 26.08%; }
-
-  .row .pull-two-phone {
-    right: 52.2%; }
-
-  .row .pull-three-phone {
-    right: 78.3%; } }
+  /*Unused, so commented out*/
+  /*
+  .row .phone-one:first-child, .row .phone-two:first-child, .row .phone-three:first-child, .row .phone-four:first-child { margin-left: 0; }
+  .row .phone-one:last-child, .row .phone-two:last-child, .row .phone-three:last-child, .row .phone-four:last-child { float: right; }
+  
+  .row .phone-one, .row .phone-two, .row .phone-three, .row .phone-four { margin-left: 4.4%; float: left; min-height: 1px; position: relative; padding: 0; }
+  
+  .row .phone-one 	{ width: 21.68% !important; }
+  .row .phone-two 	{ width: 47.8% !important; }
+  .row .phone-three 	{ width: 73.9% !important; }
+  .row .phone-four 	{ width: 100% !important; }
+  
+  .row .push-one-phone { left: 26.08%; }
+  .row .push-two-phone { left: 52.2% }
+  .row .push-three-phone { left: 78.3% }
+  
+  .row .pull-one-phone { right: 26.08% }
+  .row .pull-two-phone { right: 52.2% }
+  .row .pull-three-phone { right: 78.3%; }
+  */ }
 /* --------------------------------------------------
 	:: Block Grids
 	-------------------------------------------------- */
