--- a/frank/stylesheets/scss/global.scss
+++ b/frank/stylesheets/scss/global.scss
@@ -392,7 +392,7 @@ button.alt:hover, .button.alt:hover, input[type=submit].alt:hover {
 	border: 1px solid rgba(18, 7, 6, 0.5); 
 }
 
-button.small2, .button.small2, a.button.small2 {
+button.small, .button.small, a.button.small {
 	@include font-size-xx-small;
 	padding: 4px 8px;
 }
