General theme refinements
- Replaced most PNGs with SVG images
- Minor theme fixes
- Minor CSS fixes and cleanups
- All Javascript passes JSHint (what a soul-sucking exercise…)

--- a/frank/stylesheets/css/footer.css
+++ b/frank/stylesheets/css/footer.css
@@ -2,6 +2,7 @@
   background: #5d504f; }
 
 #page_footer {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
   padding-top: 30px;
   padding-bottom: 30px;
   margin-top: 30px;
@@ -10,4 +11,5 @@
     color: #fffefe; }
   #page_footer h3 {
     font-size: 17px;
-    color: #f0eceb; }
+    color: #f0eceb;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.7); }
