--- a/somerandomdude/stylesheets/scss/pages.scss
+++ b/somerandomdude/stylesheets/scss/pages.scss
@@ -150,6 +150,7 @@ ul#projects_list {
 
 #projects_list h3 small {
 	text-indent:6px;
+	padding:6px 0;
 	background: rgba(93, 80, 79, 0.84);
 	margin: 0;
 	position: absolute;
