--- a/frank/stylesheets/scss/footer.scss
+++ b/frank/stylesheets/scss/footer.scss
@@ -3,6 +3,7 @@
 	#page_bottom { background: $color_midtone; }
 
 	#page_footer {
+		text-shadow:0 -1px 0 rgba(0,0,0,.5);
 		padding-top:$row-height *2;
 		padding-bottom:$row-height *2;
 		margin-top: $row-height * 2;
@@ -11,6 +12,7 @@
 		h3 {
 			@include font-size-medium();
 			color: $color_light; 
+			text-shadow:0 -1px 0 rgba(0,0,0,.7);
 		}
 }
 	
