--- a/somerandomdude/stylesheets/css/ie.css
+++ b/somerandomdude/stylesheets/css/ie.css
@@ -44,3 +44,14 @@
         font-size: 11px;
         margin-top: 15px;
         font-style: italic; }
+
+/*PNG replacements*/
+#page_header h1 a {
+  background: url("/wp-content/themes/somerandomdude/images/title.png?embed=true") no-repeat; }
+#page_header nav #menu-primary li.rss a {
+  background: #ea0000 url("/wp-content/themes/somerandomdude/images/rss.png?embed=true") no-repeat center center; }
+#page_header nav #menu-primary li.twitter a {
+  background: #ea0000 url("/wp-content/themes/somerandomdude/images/twitter.png?embed=true") no-repeat center center; }
+
+#text-10 #footer_main_promo .sprite.fork {
+  background: url("/wp-content/themes/somerandomdude/images/fork.png?embed=true") no-repeat; }
