--- a/somerandomdude/stylesheets/css/pages.css
+++ b/somerandomdude/stylesheets/css/pages.css
@@ -136,6 +136,7 @@ ul#projects_list {
 
 #projects_list h3 small {
   text-indent: 6px;
+  padding: 6px 0;
   background: rgba(93, 80, 79, 0.84);
   margin: 0;
   position: absolute;
@@ -192,7 +193,7 @@ ul#projects_list {
 #p5215 object {
   height: 350px; }
 
-@media only screen and  (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   #content.page #projects_navigation {
     display: none; }
 
