--- a/frank/stylesheets/scss/variables.scss
+++ b/frank/stylesheets/scss/variables.scss
@@ -17,7 +17,7 @@ background-color: rgba(5, 0, 0, $alpha);
 }
 
 $typeface-secondary: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$typeface-primary: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$typeface-primary: Georgia, "Times New Roman", serif;
 
 $thin: 100;
 $extra-light: 200;
