--- a/frank/stylesheets/scss/grid.scss
+++ b/frank/stylesheets/scss/grid.scss
@@ -79,7 +79,7 @@
 
 
 
-	img, object, embed { max-width: 100%; height: auto; }
+	img, object, embed, video { max-width: 100%; height: auto; }
 	#map_canvas img, .map_canvas img {max-width: none!important;}
 
 	 /* Nicolas Gallagher's micro clearfix */
