--- a/frank/stylesheets/scss/single.scss
+++ b/frank/stylesheets/scss/single.scss
@@ -1,5 +1,6 @@
 #previous-post {
 	margin-top: $row-height * 4;
+	margin-bottom: $row-height * 2;
 	font-style: italic;
 	font-family: $typeface-primary;
 	a {
