Deleted legacy files, minor tweaks to theme options styles and header

--- a/frank/admin/css/frank-options.css
+++ b/frank/admin/css/frank-options.css
@@ -217,6 +217,10 @@ label.section-title {
 	font-weight: bold
 }
 
+label.inline {
+	display:inline;
+}
+
 .display-types select,
 .display-types select option {
 	max-width: 180px;
