--- a/frank/admin/css/frank-options.css
+++ b/frank/admin/css/frank-options.css
@@ -482,3 +482,5 @@ h4.reset-success img {
 	margin: -3px 5px 0 0;
 	vertical-align: middle;
 }
+
+#frank-tweet-post-handle-container.disabled {display: none;}
